--- a/ux.html
+++ b/ux.html
@@ -136,7 +136,7 @@
 <p>7 hours ago ... In this role you will focus on multiple facets of the design process including user 
 research, interaction design, data visualization, prototyping, and the production?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/brandwatch/job/o33DafwD'>Brandwatch Careers - Product/UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/brandwatch/job/o33DafwD'>Brandwatch Careers - Product/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -181,7 +181,7 @@ Provides project management expertise for highly complex creative projects,?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
+<h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -194,7 +194,7 @@ Provides project management expertise for highly complex creative projects,?...<
 <p>Jul 15, 2019 ... GOWAGO AG has a job opening for UX Researcher/Designer in Z?rich (
 published: 16.07.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://global-savings-group.join.com/jobs/270481-ux-designer-m-f'>Job @ Global Savings Group (Munich): UX Designer (... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://global-savings-group.join.com/jobs/270481-ux-designer-m-f'>Job @ Global Savings Group (Munich): UX Designer (... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -290,7 +290,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/e153db3e-b15f-4d20-8a1e-f685e52c5bbf'>BCG Digital Ventures - Senior UX Designer - FinTech Venture Startup</a></h5> 
+<h5><a href='https://jobs.lever.co/bcg/e153db3e-b15f-4d20-8a1e-f685e52c5bbf'>BCG Digital Ventures - Senior UX Designer - FinTech Venture Startup</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -298,7 +298,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -376,7 +376,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nexity/743999692113916-gestionnaire-gerance-baux-commerciaux-h-f-cdi'>Nexity GESTIONNAIRE GERANCE BAUX COMMERCIAUX H/F CDI | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Nexity/743999692113916-gestionnaire-gerance-baux-commerciaux-h-f-cdi'>Nexity GESTIONNAIRE GERANCE BAUX COMMERCIAUX H/F CDI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -457,7 +457,7 @@ for candidates with solid technical foundations and a desire to continue learnin
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/withme.health/7900a5b8-d560-4f44-b0d3-02ee510eeddf'>WithMe Health - UX/UI Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/withme.health/7900a5b8-d560-4f44-b0d3-02ee510eeddf'>WithMe Health - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
