--- a/statistics.html
+++ b/statistics.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -204,11 +204,11 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/olqAafwf'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/olqAafwf'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -246,7 +246,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -291,7 +291,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30108'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30108'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -299,7 +299,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/53070/principal-statistical-programmer--remote/job'>Principal Statistical Programmer- REMOTE in</a></h5> 
+<h5><a href='https://uscareers-prahs.icims.com/jobs/53070/principal-statistical-programmer--remote/job'>Principal Statistical Programmer- REMOTE in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Demonstrate expert knowledge and understanding of analysis data structure 
 standards (ADaM) and a good understanding of conversion data structure?...</p>
@@ -324,7 +324,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://goldcorp.referrals.selectminds.com/jobs/geostatistican-specialist-2043'>Geostatistican Specialist - Goldcorp Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://goldcorp.referrals.selectminds.com/jobs/geostatistican-specialist-2043'>Geostatistican Specialist - Goldcorp Careers</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -332,7 +332,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://celerion.applicantstack.com/x/detail/a2mzq2vhdipo'>Biostatistician - Celerion</a></h5> 
+<h5><a href='https://celerion.applicantstack.com/x/detail/a2mzq2vhdipo'>Biostatistician - Celerion</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Celerion is looking for a Biostatistician to join our global Data Management and 
 Biometrics team in Belfast, Northern Ireland. This role is responsible for the?...</p>
@@ -349,7 +349,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/mejfz3rRrb/Statistical-Programmer'>Statistical Programmer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/mejfz3rRrb/Statistical-Programmer'>Statistical Programmer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -375,7 +375,7 @@ in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<h5><a href='https://uscareers-prahs.icims.com/jobs/54113/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54113/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Senior Statistical Programmer. Overview: Provides statistical programming 
 support for the implementation of data models and the reporting of clinical trials?...</p>
@@ -418,13 +418,13 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='http://afterinc.recruiterbox.com/jobs/fk06s9i'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://afterinc.recruiterbox.com/jobs/fk06s9i'>
     Statistician  at After Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/mgr-statistical-modeling-24998'>Mgr Statistical Modeling - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/mgr-statistical-modeling-24998'>Mgr Statistical Modeling - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
